feat: add IdentityProvider port and KeycloakIdentityProvider adapter
- Domain port: IdentityProvider interface + CreateUserCommand
- Typed exceptions: IdentityProviderException, DuplicateUsernameException, DuplicateEmailException
- Infra adapter: KeycloakIdentityProvider (RestClient, client-credentials flow)
- Config: KeycloakProperties (@ConfigurationProperties), IdentityProviderConfig
- BFF security: OidcLoginSuccessHandler, CSRF config, HMAC JwtDecoder
- Fix GlobalExceptionHandler for NoResourceFoundException -> 404
- Tests: unit (MockRestServiceServer), integration (Testcontainers), BFF security slice